# kmeans

./: .gitignore  CMakeLists.txt  cuda_io.cu  file_io.c  getopt.c  gettimeofday.c  unistd.h
sys/: time.h
